20040513 roms/{Makefile.am,plus3e-[0123].rom}: add +3e ROMs.
20040514 spectrum.[ch]: Correct RAM array size comments.
20040514 dck.c: Move i and mem variables to loop that uses them.
20040514 roms/{Makefile.am,se-[01].rom}: add SE ROMs.
20040514 if2.c,machine.[ch],memory.[ch],debugger/breakpoint.[ch],
	 machines/,ui/gtk/debugger.c: allow breakpoints to be set for
	 non-RAM pages.
20040514 memory.[ch],debugger/breakpoint.[ch]: allow breakpoints to be set
	 on the ROMCS pages.
20040516 spectrum.c: use Ramsoft's screen/attributes pattern for the
	 floating bus, but stick to the 14335/14361 timings. Arkanoid and
	 Sidewize now work.
20040517 memory.[ch],scld.c,tape.c,trdos.c,utils.c,debuggger/breakpoint.c,
	 machines/{scorpion.c,spec128.c,spec16.c,spec48.c,spec_se.c,
	 specplus3.c},ui/gtk/debugger.c,z80/{coretest.c,z80.pl,z80_macros.h,
	 z80_ops.c}: refactor to introduce separate mappings for reading
	 and writing.
20040517 Makefile.am,fuse.c,machine.c,memory.c,menu.[ch],menu_data.c,
	 periph.c,settings.dat,zxatasp.[ch],zxcf.[ch],ui/options.dat:
	 first commit of ZXATASP/ZXCF code. Not working yet.
20040517 memory.c,menu.h,menu_data.c,zxatasp.[ch],zxcf.c,
	 machines/{machines.h,spec16.c,spec48.[ch],tc2048.c,tc2068.c},
	 options.dat: ZXATASP/ZXCF closer to working and some related
	 tidy-ups.
20040517 zxatasp.c,zxcf.c: get page mappings (closer to) correct. ZXCF
	 now boots, although ZXATASP doesn't.
20040518 configure.in,acconfig,h: Remove need for acconfig.h for newer
         autotools per patch #953734.
20040518 roms/se-0.rom: Change 3 bytes at 0x240 to XOR A, OUT (FF), A instead
         of NOP, NOP, NOP. This resets the SCLD on real hardware.
20040519 machine.c,snapshot.[ch],zxcf.[ch]: add support for saving
	 snapshots with ZXCF support.
20040521 trdos.c,machines/{pentagon.c,scorpion.c,spec128.c}: use /ROMCS
	 to page in the TRDOS ROM.
20040521 spec_se.c,specplus3.c: enable /ROMCS on the +2A/+3/+3e/SE to
	 let ZXCF work there.