@@ -44,6 +44,7 @@ int tc2048_init( fuse_machine_info *machine );
 int tc2048_port_contended( libspectrum_word port );
 
 int tc2068_init( fuse_machine_info *machine );
+int tc2068_tc2048_common_reset( void );
 libspectrum_byte tc2068_unattached_port( void );
 int tc2068_memory_map( void );
 
