@@ -840,3 +840,7 @@
 	 to page in the TRDOS ROM.
 20040521 spec_se.c,specplus3.c: enable /ROMCS on the +2A/+3/+3e/SE to
 	 let ZXCF work there.
+20040521 machines/{machines.h,tc2048.c,tc2068.c}: get the dock/exrom
+	 working properly again.
+
+	
